--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "devDependencies": {
         "eslint": "^5.12.1",
         "gulp": "4.0.0",
+        "gulp-autoprefixer": "^6.0.0",
         "gulp-connect": "^5.7.0",
+        "gulp-cssnano": "^2.1.3",
         "gulp-open": "^3.0.1",
+        "gulp-rename": "^1.4.0",
         "gulp-sass": "4.0.2",
         "normalize.css": "8.0.0",
         "run-sequence": "2.2.1"
+    },
+    "dependencies": {
+
     }
 }
